--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,7 +7,27 @@
 {% extends 'layouts/application.html' %}
 
 {% block content %}
+<link rel="stylesheet" href="stylesheets/app.css">
+<script scr="javascript/jquery-3.3.1.js"></script>
+<script scr="javascript/myplagin.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
 <link rel="stylesheet" href="stylesheets/bootstrap.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
+<script>
+    $(document).ready(function(){
+        $('.slider').bxSlider();
+    });
+</script>
+
+<script>
+    $(document).ready(function(){
+        $('.red').click();
+    });
+</script>
 <div class="container-fluid">
     <div class="container">
         <div class="row">
@@ -19,18 +39,16 @@
                         </div>
                     </div>
                     <div class="col-lg-4 offset-lg-5">
-                        <span>
+                        <div class="row">
                             <a href="/"><img src="../images/writy_my.jpg" alt=""></a>
                             <a href="#">Написать нам</a>
-                        </span>
-                        <span>
                             <div class="lan">
-                                <ul>
-                                    <li><a href="#" class="active">UA</a></li>
-                                    <li><a href="#">RU</a></li>
-                                </ul>
+                                <div class="row">
+                                    <div><a href="#" class="active">UA</a></div>
+                                    <div> <a href="#">RU</a></div>
+                                </div>
                             </div>
-                        </span>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -49,14 +67,18 @@
                 </div>
             </div>
             <div class="col-lg-12">
-                <a href="/"><img src="../images/picture.jpg" alt=""></a>
+                <div class="col-lg-12">
+                    <div class="slider">
+                        <a href="/"><img src="../images/picture.jpg" alt=""></a>
+                        <a href="/"><img src="../images/picture.jpg" alt=""></a>
+                        <a href="/"><img src="../images/picture.jpg" alt=""></a>
+                    </div>
             </div>
             <div class="col-lg-12">
-                <div>«Биологише Хальмиттель Хеель ГмбХ» (далее «Хеель») - один из лидеров производства комплексных гомеопатических препаратов,
+                <div class="red">«Биологише Хальмиттель Хеель ГмбХ» (далее «Хеель») - один из лидеров производства комплексных гомеопатических препаратов,
                     с предприятиями по всему миру.</div>
             </div>
 
-        </div>
     </div>
     <div class="grey">
         <div class="container">
